docs/4.0/fields/trix.md
---
license: community
demo: https://trix.avodemo.com/
description: "Renders the Trix WYSIWYG editor, storing its HTML content in a string or text column."
fieldTags: [rich text, attachments]
---

# Trix

```ruby
field :body, as: :trix
```

The `Trix` field renders a [WYSIWYG Editor](https://trix-editor.org/) and can be associated with a `string` or `text` column in the database. The value stored in the database will be the editor's resulting `HTML` content.

It supports [ActiveStorage](https://guides.rubyonrails.org/active_storage_overview.html) file attachments, [ActionText](https://guides.rubyonrails.org/action_text_overview.html), and seamlessly integrates with the [Media Library](./../media-library).

<Image src="/assets/img/4_0/fields/trix/form.webp" dark-src="/assets/img/4_0/fields/trix/form-dark.webp" width="1520" height="588" alt="An Avo edit-form card with a Trix WYSIWYG editor showing the formatting toolbar above a text area with sample body content." prompt="trix editor on the edit form with toolbar and sample body content" />

Trix field is hidden from the `Index` view.

## Options

<!-- @include: ./../common/field_options/always_show.md-->

<Option name="`attachments_disabled`">

Hides the attachments button from the Trix toolbar.

<!-- @include: ./../common/default_boolean_false.md-->
</Option>

<Option name="`hide_attachment_filename`">

Hides the attachment's name from the upload output in the field value.

<!-- @include: ./../common/default_boolean_false.md-->
</Option>

<Option name="`hide_attachment_filesize`">

Hides the attachment size from the upload output in the field value.

<!-- @include: ./../common/default_boolean_false.md-->
</Option>

<Option name="`hide_attachment_url`">

Hides the attachment URL from the upload output in the field value.

<!-- @include: ./../common/default_boolean_false.md-->
</Option>

<Option name="`attachment_key`">

Enables file attachments.

#### Default value

`nil`

#### Possible values

`nil`, or a symbol representing the `has_many_attachments` key on the model.
</Option>

## File attachments

<!-- @include: ./../common/files_gem_common.md-->

Trix supports drag-and-drop file attachments. To enable **Active Storage** integration, you must add the `attachment_key` option to your Trix field.

```ruby
field :body, as: :trix, attachment_key: :trix_attachments
```

That `attachment_key` has to have the same name as the model.

```ruby{2}
class Post < ApplicationRecord
  has_many_attached :trix_attachments
end
```

Now, when you upload a file in the Trix field, Avo will create an Active Record attachment.

## Disable attachments

You may want to use Trix only as a text editor and disable the attachments feature. Adding the `attachments_disabled` option will hide the attachments button (paperclip icon).

```ruby
field :body, as: :trix, attachments_disabled: true
```

## Remove attachment attributes

By default, Trix will add some meta-data in the editor (filename, filesize, and URL) when adding an attachment. You might not need those to be present in the document. You can hide them using `hide_attachment_filename`, `hide_attachment_filesize`, and `hide_attachment_url`.

## Active Storage

Trix integrates seamlessly with Active Storage. When you use it with a plain database column on a record table (not with Action Text) you have to set the `attachment_key` option (documented above).

## Action Text

Trix integrates seamlessly with Action Text. It will automatically work with Action Text as well and it won't require you to add an `attachment_key`.

## Demo app

We prepared a [demo](https://trix.avodemo.com/) to showcase Trix's abilities to work with Action Text and Active Storage.

## Javascript Alert Messages

You can customize the javascript alert messages for various actions in the Trix editor. Below are the default messages that can be translated or modified:

```yml
avo:
  this_field_has_attachments_disabled: This field has attachments disabled.
  you_cant_upload_new_resource: You can't upload files into the Trix editor until you save the resource.
  you_havent_set_attachment_key: You haven't set an `attachment_key` to this Trix field.
```

Refer to the [default](https://github.com/avo-hq/avo/blob/main/lib/generators/avo/templates/locales/avo.en.yml) for more details.
